function to get id restaurant by owner email
